<resources>
    <string name="app_name">CyberSecurityApp</string>
    <string name="guest">Guest</string>
    <string name="username">Username</string>
    <string name="cybersecurity_app">CyberSecurity App</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="title_activity_test">TEST</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="background">background</string>
    <string name="account_requirements">Account Requirements</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Settings">Settings</string>
    <string name="test_your_knowledge__string">Test Your Knowledge!</string>
    <string name="Startquzze_string">Start Quiz</string>
    <string name="categories_string">Categories</string>

    <string name="langs" translatable="false">Languages</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
<!--    <string name="title_activity_menu">MenuActivity</string>-->
<!--    <string name="title_home">Home</string>-->
<!--    <string name="title_Profile">Profile</string>-->
<!--    <string name="title_Settings">Settings</string>-->
<!--    <string name="cyberguru_string">CyberGuru</string>-->
<!--    <string name="test_your_knowledge__string">Test Your Knowledge!</string>-->
<!--    <string name="Startquzze_string">Start Quiz</string>-->
<!--    <string name="categories_string">Categories</string>-->


    <string name="cyberguru">CyberGuru</string>
    <string name="descriptionDark">Dark Mode</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
</resources>