<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/titleText"
        android:hint="@string/email"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:alpha="0.3"
        android:backgroundTint="@color/white"
        android:background="@drawable/textview_ek1_shape"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:background="@drawable/textview_ek1_shape"
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textUserName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:alpha="0.3"
        android:backgroundTint="@color/white"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:layout_below="@id/textPassword"
        android:text="@string/forgot_password"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:width="200dp"
        android:onClick="LoginButtonPressed"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:onClick="BackButtonPressed"
        android:text="@string/back"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>