<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/cybersecurity_app"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLoginMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:width="300dp"
        android:height="50dp"
        android:onClick="LoginButtonPressed"
        android:text="@string/login"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold"
        android:alpha="0.8"
        app:iconTint="#FFFFFF"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginMain"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:width="300dp"
        android:height="50dp"
        android:onClick="RegisterButtonPressed"
        android:text="@string/register"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold"
        android:alpha="0.8"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:width="300dp"
        android:height="50dp"
        android:onClick="GuestButtonPressed"
        android:text="@string/guest"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold"
        android:alpha="0.8"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>