<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/register" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/titleText"
        android:hint="@string/username"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:text="@string/register"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:width="200dp"
        android:onClick="BackButtonPressed"
        android:text="@string/back"
        tools:ignore="UsingOnClickInXml" />
</RelativeLayout>