<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".menufrag.MenuSettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/acc_flag_ESP"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/spanish"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/spainflag"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/acc_flag_FRA"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/french"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/acc_flag_ESP"
            app:layout_constraintStart_toEndOf="@+id/acc_flag_GBR"
            app:srcCompat="@drawable/franceflag"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/acc_flag_GBR"
            android:layout_width="71dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/english"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ukflag"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>