<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__mainactivity__ek2_color"
    tools:context=".MainMenu">

    <View
        android:id="@+id/header"
        android:layout_width="410dp"
        android:layout_height="128dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/header_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:text="@string/cyberguru_string"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="53dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="127dp"
        android:src="@drawable/testyourknowledgebox_shape"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="278dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="75dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/test_your_knowledge__string"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="309dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonStartQuizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Startquzze_string"
        android:textColor="@color/cyberguru_color"
        app:iconTint="#F44336"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="324dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/categories_string"
        android:textColor="@color/cyberguru_color"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="447dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>